<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".Registro">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <!-- REGISTRO -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RegistroTxt"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000"
            android:gravity="center">
        </TextView>
        <!-- IMAGEN -->
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/img"
            android:layout_gravity="center">
        </androidx.appcompat.widget.AppCompatImageView>

        <!-- CORREO -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/Correo"
                android:hint="@string/Correo"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />



        </com.google.android.material.textfield.TextInputLayout>

        <!-- CONTRASEÑA -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Password"
                android:hint="@string/Password"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:importantForAutofill="no"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- NOMBRE -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Nombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Nombres"
                android:importantForAutofill="no"
                android:inputType="textCapWords|textAutoCorrect" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- APELLIDOS -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Apellidos"
                android:hint="@string/Apellidos"
                android:inputType="textCapWords|textAutoCorrect"
                android:importantForAutofill="no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- TELEFONO -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Telefono"
                android:hint="@string/Telefono"
                android:inputType="number"
                android:importantForAutofill="no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/RegistrarBtn"
            android:text="@string/RegistrarUsuario"
            android:background="#6E6E6E"
            android:textColor="#fff"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Button>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>