<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".Login">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        android:gravity="center">

        <TextView
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/img"
            android:layout_marginTop="10dp">
        </androidx.appcompat.widget.AppCompatImageView>
        //CORREO
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:startIconDrawable="@drawable/user_icon">

            <EditText
                android:id="@+id/CorreoLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CorreoLogin"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck"></EditText>
        </com.google.android.material.textfield.TextInputLayout>

        //CONTRASEÑA
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/pass_icon">

            <EditText
                android:id="@+id/Passwordlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PasswordLogin"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColorHint="#fff"
                tools:ignore="SpeakableTextPresentCheck"></EditText>
        </com.google.android.material.textfield.TextInputLayout>

        //BOTON
        <Button
            android:id="@+id/INGRESAR"
            android:text="@string/INGRESAR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Button>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>